# vscode-cmake-multi-project-bug

./: LICENSE  README.md  setup.sh  vscode-cmake-multi-project-bug.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
app/src/: CMakeLists.txt  cli.cc  test_cli.sh
lib/src/: CMakeLists.txt  fib.cc  fib.hh  fib_tests.cc
